Bug 903182 - URL textbox not showing in appbar in snapped r=ally,jwilde
UltraBlame original commit: b8f0329613e678a08cd6cf363c979b76db6d12b1

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -4426,6 +4426,25 @@ events
 none
 ;
 }
+#
+toolbar
+[
+viewstate
+=
+"
+snapped
+"
+]
+#
+toolbar
+-
+contextual
+{
+visibility
+:
+collapse
+;
+}
 .
 circularprogressindicator
 -
