--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -3008,6 +3008,23 @@ transparent
 ;
 }
 appbar
+[
+viewstate
+=
+"
+snapped
+"
+]
+toolbar
+toolbarbutton
+{
+margin
+:
+0
+toolbar_snapped_horizontal_spacing
+;
+}
+appbar
 toolbar
 toolbarbutton
 [
